# speedtest-manager

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini
speedtest_manager/: __init__.py  client.py  connection.py  control.py  jobs.py  logging.py  manager.py  speedtest.py
test/: __init__.py  test_connection.py
