[tool.poetry]
name = "speedtest-manager"
version = "0.1.9"
description = "Manager service that uses Ookla's Speedtest CLI utility to perform measurements on the local network."
authors = ["Thiago Marback <tmarback@sympho.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tinydb = "^4.3.0"
tinyrecord = "^0.2.0"
APScheduler = "^3.7.0"
SQLAlchemy = "^1.3.23"
python-dateutil = "^2.8.1"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
speedtest-manager = "speedtest_manager.manager:main"
speedtest-client = "speedtest_manager.client:main"
